--- a/contato-e-saiba-mais/saiba-mais/index.html
+++ b/contato-e-saiba-mais/saiba-mais/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Terapia Cognitivo-Comportamental</title>
+  <title>Abordagem a TCC e Benefícios da Terapia</title>
   <link rel="icon" type="image/png" href="icons/email.png" />
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap" rel="stylesheet">
 
@@ -11,7 +11,7 @@
     body {
       margin: 0;
       font-family: 'Space Grotesk', sans-serif;
-      background: linear-gradient(to right, #F3F2EB 50%, #DCE7DD 50%);
+      background: linear-gradient(to right, #F3F2EB 50%, #007A5E 50%);
     }
 
     main {
@@ -87,7 +87,7 @@
       </ul>
     </section>
 
-    <!-- Por que escolher a TCC -->
+    <!-- Por que escolher a TCC? -->
     <section>
       <div class="balao">Por que escolher a TCC?</div>
       <p class="texto">
