--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAQ</title>
 </head>
-<body style="background-color: #f3f2eb;">
-    <header class="header">
-        <h1 class="header_title"; style="font-size:50px; color: #ada4ff;text-align: center;">Dúvidas Frequentes （FAQ）</h1>
+<body style="background-color: #f3f2eb;"> <!--cor de fundo -->
+    <header class="header"> 
+        <h1 class="header_title"; style="font-size:50px; color: #ada4ff;text-align: center;">Dúvidas Frequentes （FAQ）</h1> <!-- Titulo -->
     </header>
 
-    <main class="faq"></main>
+    <main class="faq"></main> <!--Perguntas e respostas -->
         <section class="faq-questoes">
-            <div style="display: flex; justify-content: center;">
-                <details style=" display:inline-block; border-radius: 6px; width: 80%; max-width: 2000px; margin: 10px 0;">
-                    <summary style="background-color: #007a5e; font-family: Arial, Helvetica, sans-serif; font-size: 20px; color:#fff; text-align:left; padding: 10px; border-radius: 6px; font-weight:bold">
-                    Como funciona os atendimentos?
-                    </summary>
-                    <p style="font-family: Arial; font-size: 17px; color:#fff;background-color: #007a5d8d ; text-align:justify; margin: 0%; border-radius: 5px;">Os atendimentos são realizados de forma individual, com foco nas necessidades e objetivos de cada paciente. As sessões têm duração de 50 minutos e podem ser feitas presencialmente ou online, conforme a preferência e disponibilidade. O processo terapêutico é sigiloso, respeitoso e conduzido com acolhimento, visando o bem-estar e o desenvolvimento emocional do paciente.</p>
+            <div style="display: flex; justify-content: center;"> <!--conteúdo centralizado -->
+                <details style=" display:inline-block; border-radius: 6px; width: 80%; max-width: 2000px; margin: 10px 0;"> <!-- bordas e suas medidas -->
+                    <summary style="background-color: #007a5e; font-family: Arial, Helvetica, sans-serif; font-size: 20px; color:#fff; text-align:left; padding: 10px; border-radius: 6px; font-weight:bold"> 
+                    Como funciona os atendimentos? 
+                    </summary> <!-- Pergunta -->
+                    <p style="font-family: Arial; font-size: 17px; color:#fff;background-color: #007a5d8d ; text-align:justify; margin: 0%; border-radius: 5px;">Os atendimentos são realizados de forma individual, com foco nas necessidades e objetivos de cada paciente. As sessões têm duração de 50 minutos e podem ser feitas presencialmente ou online, conforme a preferência e disponibilidade. O processo terapêutico é sigiloso, respeitoso e conduzido com acolhimento, visando o bem-estar e o desenvolvimento emocional do paciente.</p> <!-- Resposta -->
             
                 </details>
             </div>
