--- a/index.html
+++ b/index.html
@@ -3,10 +3,122 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
 </head>
-<body>
-    <h1>"Hello world"</h1>
-    
+<link rel="stylesheet" href="assents/css/style.css"> <!-- Caminho para o arquivo CSS -->
+<link rel="jscript" href="assents/js/script.js"> <!-- Caminho para o arquivo JS -->
+<body style="background-color: #f3f2eb;">  <!-- Cor de fundo da página -->
+       <header>
+    <img src="assents/imagens/logo.PNG" style="width: 88px; height: 88px; left: 39px; top: 38px; position: absolute;"> <!-- Logo da empresa -->
+    <h1 style="width: 231px; height: 42px; left: 131px; top: 61px; position: absolute; color: #325746; font-size: 25px; font-family: Trirong; font-weight: 700; word-wrap: break-word">Ser em equilibrio <!-- Nome da empresa -->
+    <div style="width: 1384px; height: 72px; left: 28px; top: 46px; position: absolute; background: white; border-radius: 100px"></div> <!-- Barra de navegação -->
+    <nav>
+        <ul style="list-style-type:  none; color: black; font-size: 18px; display: flex; gap: 20px; margin-top: 50px;position: relative; ">
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/sobre.html">Sobre</a></li>
+            <li><a href="/service.html">Serviços</a></li>
+            <li><a href="/know.html">Saiba mais</a></li>
+            <li><a href="/questions.html">Perguntas frequentes</a></li>
+            <li><a href="/contact.html">Contato</a></li>
+        </ul>
+    </nav>
+   </header>
+   <main>
+    <div style="width: 643px; height: 274px; left: 83px; top: 326px; position: absolute; color: black; font-size: 35px; font-family: Open Sans; font-weight: 700; word-wrap: break-word">Bem-vindo(a) ao seu espaço de equilíbrio e bem-estar</div>
+</div>
+    <div style="width: 701px; height: 308px; left: 83px; top: 498px; position: absolute; color: black; font-size: 22px; font-family: Open Sans; font-weight: 400; word-wrap: break-word">Aqui, você encontrará um lugar acolhedor e seguro para explorar suas emoções, pensamentos e desafios.<br/>Oferecemos acompanhamento psicológico personalizado, com a missão de promover o autoconhecimento, o bem-estar e a saúde mental.</div>
+    <div style="width: 566.64px; height: 168.75px; left: 809.64px; top: 242.04px; position: absolute; background: #4F8C70; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 100px"></div> <!-- Caixa de destaque -->
+    <div style="width: 350.79px; height: 168.79px; left: 809.10px; top: 242px; position: absolute; background: #3F735B; border-radius: 100px"></div>
+    <div style="width: 409.50px; height: 170.72px; left: 966.79px; top: 442.19px; position: absolute; background: #007A5E; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 100px"></div>
+    <div style="width: 318.15px; height: 170.72px; left: 966.79px; top: 442.19px; position: absolute; background: #325746; border-radius: 87px"></div>
+    <img style="width: 158.70px; height: 154.17px; left: 963.70px; top: 603.11px; position: absolute; transform: rotate(180deg); transform-origin: top left; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 124px" src="assents/imagens/casal.jpg" > <!-- Imagem de destaque -->
+    <div style="width: 409.50px; height: 170.72px; left: 805px; top: 645.28px; position: absolute; background: #169477; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 100px"></div>
+    <div style="width: 58.83px; height: 170.72px; left: 945.89px; top: 645.28px; position: absolute; background: #04654F"></div>
+    <div style="width: 54.19px; height: 170.72px; left: 891.70px; top: 645.28px; position: absolute; background: #24503C"></div>
+    <img style="width: 156.24px; height: 154.01px; left: 1223.91px; top: 652.03px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 105px" src="assents/imagens/imagem-homem.jpg" > <!-- Imagem de destaque -->
+    <img style="width: 151.64px; height: 151.64px; left: 1228.52px; top: 251.58px; position: absolute; background: linear-gradient(0deg, rgba(0, 122, 94, 0.10) 0%, rgba(0, 122, 94, 0.10) 100%); box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 156px" src="assents/imagens/imagem-mãe.jpg" > <!-- Imagem de destaque -->
+    <div style="width: 479px; height: 46px; left: 127px; top: 765px; position: absolute; background: #24503C; border-radius: 100px"></div> <!--botão de contato-->
+    <div style="width: 479px; height: 44px; left: 127px; top: 772px; position: absolute; text-align: center; color: white; font-size: 18px; font-family: Trirong; font-weight: 700; word-wrap: break-word">Contato</div>
+
+    <div style="width: 1700px; height: 1024px; position: relative; background: #325746; overflow: hidden; margin-top: 900px;">
+        <div style="width: 409px; height: 51px; left: 110px; top: 103px; position: absolute; background: white; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 100px"></div>
+        <div style="width: 479px; height: 44px; left: 75px; top: 116px; position: absolute; text-align: center; color: black; font-size: 18px; font-family: Trirong; font-weight: 700; word-wrap: break-word">NÓS ESTAMOS AQUI POR VOCÊ</div>
+        <div style="width: 211px; height: 187px; left: -10px; top: 546px; position: absolute; background: #169477; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 100px"></div>
+        <div style="width: 1068px; height: 520px; left: 110px; top: 228px; position: absolute; color: white; font-size: 35px; font-family: Open Sans; font-weight: 400; word-wrap: break-word">“Acolhendo sua história, construindo novos caminhos”</div>
+        <div style="width: 701px; height: 46px; left: 110px; top: 646px; position: absolute"><span style="color: #325746; font-size: 22px; font-family: Open Sans; font-weight: 700; word-wrap: break-word">Quando</span><span style="color: white; font-size: 22px; font-family: Open Sans; font-weight: 700; word-wrap: break-word"> devo procurar um psicólogo ?</span></div>
+        <div style="width: 1700px; height: 0px; left: 0px; top: 339px; position: absolute; outline: 6px #F3F2EB solid; outline-offset: -3px"></div>
+        <div style="width: 701px; height: 308px; left: 632px; top: 532px; position: absolute; text-align: justify; color: white; font-size: 22px; font-family: Open Sans; font-weight: 400; word-wrap: break-word">Sempre que sentir necessidade de apoio emocional, estiver passando por desafios na vida, enfrentando ansiedade, depressão ou dificuldades nos relacionamentos, a terapia pode ser um grande aliado para o seu bem-estar.<br/><br/>A terapia não é apenas para momentos de crise ou sofrimento intenso. Assim como cuidamos do corpo preventivamente, também podemos cuidar da mente antes que os desafios se tornem maiores.</div>
+        <div style="width: 409.50px; height: 170.72px; left: 1128px; top: 823px; position: absolute; background: white; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 100px"></div>
+        <div style="width: 192.26px; height: 159px; left: 1125.87px; top: 114px; position: absolute"></div>
+        <div style="width: 291px; height: 220px; left: 1294px; top: 19px; position: absolute; background: #3F735B; border-radius: 100px"></div>
+      </div>
+      <div style="width: 1700px; height: 1024px; position: relative; background: #F3F2EB; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); overflow: hidden;">
+        <div style="width: 479px; height: 44px; left: -67px; top: 147px; position: absolute; text-align: center; color: #325746; font-size: 18px; font-family: Trirong; font-weight: 700; word-wrap: break-word">ABORDAGEM</div>
+        <div style="width: 1383px; height: 458px; left: 1440px; top: 864px; position: absolute; transform: rotate(180deg); transform-origin: top left; background: white; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 200px"></div>
+        <div style="width: 1094px; height: 308px; left: 173px; top: 551px; position: absolute; text-align: justify"><span style="color: #325746; font-size: 22px; font-family: Open Sans; font-weight: 700; word-wrap: break-word">Terapia Cognitivo-Comportamental <br/><br/></span><span style="color: #325746; font-size: 22px; font-family: Open Sans; font-weight: 400; word-wrap: break-word">Uma abordagem baseada em evidências científicas, focada na relação entre pensamentos, emoções e comportamentos. Seu objetivo é ajudar a identificar e modificar padrões disfuncionais de pensamento que influenciam sentimentos e ações, promovendo mudanças positivas na vida do paciente.</span></div>
+        <div style="width: 1206px; height: 116px; left: 110px; top: 290px; position: absolute; color: #325746; font-size: 35px; font-family: Open Sans; font-weight: 400; word-wrap: break-word">“Mudar o pensamento é o primeiro passo para transformar a vida.”</div>
+        <img style="width: 345px; height: 345px; left: 1267px; top: 47px; position: absolute" src="assents/imagens/logo.PNG" />
+        <div style="width: 479px; height: 46px; left: 480px; top: 933px; position: absolute; background: #24503C; border-radius: 100px"></div>
+        <div style="width: 479px; height: 44px; left: 480px; top: 940px; position: absolute; text-align: center; color: white; font-size: 18px; font-family: Trirong; font-weight: 700; word-wrap: break-word">Saiba mais </div>
+      </div>
+
+      <div style="width: 1700px; height: 1240px; position: relative; background: #F3F2EB; overflow: hidden">
+        <div style="width: 1383px; height: 458px; left: 0px; top: 360px; position: absolute">
+          <div style="width: 1383px; height: 458px; left: 0px; top: 0px; position: absolute; background: #169477; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 200px"></div>
+        </div>
+        <div style="width: 479px; height: 44px; left: 961px; top: 54px; position: absolute; text-align: center; color: #325746; font-size: 18px; font-family: Trirong; font-weight: 700; word-wrap: break-word"> SOBRE NÓS</div>
+        <div style="width: 1206px; height: 116px; left: 177px; top: 157px; position: absolute; color: #325746; font-size: 35px; font-family: Open Sans; font-weight: 400; word-wrap: break-word">"Conhecer quem vai te acompanhar é o ponto de partida para um caminho de autoconhecimento e acolhimento."</div>
+        <div style="width: 1136px; height: 308px; left: 152px; top: 450px; position: absolute"><span style="color: white; font-size: 22px; font-family: Open Sans; font-weight: 700; word-wrap: break-word"><br/><br/></span><span style="color: white; font-size: 22px; font-family: Open Sans; font-weight: 400; word-wrap: break-word">Com anos de experiência em atendimentos presenciais e online, a Dra. Gedalva de Souza<br/>(crp 06/164765), oferece atendimento psicológico, proporcionando suporte emocional e autoconhecimento, com a abordagem da Terapia Cognitivo-Comportamental (TCC), as sessões ajudam a compreender e modificar padrões de pensamento e comportamento que impactam sua vida. <br/>Agende sua consulta e dê o primeiro passo para uma vida mais equilibrada e saudável!</span></div>
+        <div style="width: 479px; height: 46px; left: 480px; top: 898px; position: absolute; background: #24503C; border-radius: 100px"></div>
+        <div style="width: 479px; height: 44px; left: 480px; top: 906px; position: absolute; text-align: center; color: white; font-size: 18px; font-family: Trirong; font-weight: 700; word-wrap: break-word">Saiba mais </div>
+        <div style="width: 1652.71px; height: 399px; left: -46px; top: 898px; position: absolute; background: white; box-shadow: 8px 0px 6px rgba(0, 0, 0, 0.25) inset; border-radius: 200px"></div>
+      </div>
+
+      <div style="width: 1700px; height: 1340px; position: relative; background: white; overflow: hidden">
+        <div style="width: 659px; height: 0px; left: 961px; top: 259px; position: absolute; outline: 6px #169477 solid; outline-offset: -3px"></div>
+        <img style="width: 490px; height: 415px; left: 103px; top: 130px; position: absolute; box-shadow: 0px 10px 4px rgba(0, 0, 0, 0.25) inset; border-top-right-radius: 207.50px; border-bottom-right-radius: 207.50px; border-bottom-left-radius: 207.50px" src="assents/imagens/imagem-mulher.jpg"/>
+        <div style="width: 317px; height: 296px; left: 1037px; top: 634px; position: absolute; transform: rotate(180deg); transform-origin: top left; border-radius: 100px"></div>
+        <div style="width: 479px; height: 44px; left: 961px; top: 91px; position: absolute; text-align: center; color: #325746; font-size: 18px; font-family: Trirong; font-weight: 700; word-wrap: break-word">SERVIÇOS</div>
+        <div style="width: 627px; height: 308px; left: 755px; top: 295px; position: absolute; color: #24503C; font-size: 22px; font-family: Open Sans; font-weight: 400; word-wrap: break-word">Mais do que tratar sintomas, o processo terapêutico com jovens é um espaço seguro para crescer, se expressar e aprender a lidar com os desafios de forma mais saudável e consciente.</div>
+        <div style="width: 627px; height: 308px; left: 130px; top: 976px; position: absolute; color: #24503C; font-size: 22px; font-family: Open Sans; font-weight: 400; word-wrap: break-word">Mais do que tratar sintomas, o processo terapêutico com jovens é um espaço seguro para crescer, se expressar e aprender a lidar com os desafios de forma mais saudável e consciente.</div>
+        <div style="width: 401px; height: 48px; left: 868px; top: 175px; position: absolute; color: #325746; font-size: 35px; font-family: Open Sans; font-weight: 700; word-wrap: break-word">Terapia para jovens</div>
+        <div style="width: 401px; height: 48px; left: 296px; top: 828px; position: absolute; color: #325746; font-size: 35px; font-family: Open Sans; font-weight: 700; word-wrap: break-word">Terapia para adultos</div>
+        <div style="width: 659px; height: 0px; left: 581px; top: 914px; position: absolute; transform: rotate(180deg); transform-origin: top left; outline: 6px #169477 solid; outline-offset: -3px"></div>
+        <img style="width: 490px; height: 415px; left: 1382px; top: 1189px; position: absolute; transform: rotate(180deg); transform-origin: top left; box-shadow: 0px 10px 4px rgba(0, 0, 0, 0.25) inset; border-top-right-radius: 207.50px; border-bottom-right-radius: 207.50px; border-bottom-left-radius: 207.50px" src="assents/imagens/imagem-homem 2.jpg" />
+        <div style="width: 625px; height: 46px; left: 757px; top: 543px; position: absolute; background: #24503C; border-radius: 100px"></div>
+        <div style="width: 625px; height: 44px; left: 757px; top: 626px; position: absolute; text-align: center; color: white; font-size: 18px; font-family: Trirong; font-weight: 700; word-wrap: break-word">Saiba mais </div>
+        <div style="width: 479px; height: 44px; left: 843px; top: 549px; position: absolute; text-align: center; color: white; font-size: 18px; font-family: Trirong; font-weight: 700; word-wrap: break-word">Saiba mais </div>
+        <div style="width: 625px; height: 46px; left: 130px; top: 1231px; position: absolute; background: #24503C; border-radius: 100px"></div>
+        <div style="width: 479px; height: 44px; left: 216px; top: 1237px; position: absolute; text-align: center; color: white; font-size: 18px; font-family: Trirong; font-weight: 700; word-wrap: break-word">Saiba mais </div>
+      </div>
+
+      <div style="width: 1700px; height: 644px; position: relative; background: #325746; overflow: hidden">
+        <div style="width: 711px; height: 70px; left: 364px; top: 92px; position: absolute; background: white; box-shadow: 0px 8px 4px rgba(0, 0, 0, 0.25); border-radius: 200px"></div>
+        <div style="width: 711px; height: 70px; left: 79px; top: 245px; position: absolute; background: white; box-shadow: 0px 8px 4px rgba(0, 0, 0, 0.25); border-radius: 35px"></div>
+        <div style="width: 570px; height: 70px; left: 1360px; top: 431px; position: absolute; transform: rotate(180deg); transform-origin: top left; background: white; box-shadow: 0px 8px 4px rgba(0, 0, 0, 0.25); border-radius: 35px"></div>
+        <div style="width: 479px; height: 44px; left: 460px; top: 104px; position: absolute; text-align: center; color: #325746; font-size: 30px; font-family: Open Sans; font-weight: 700; word-wrap: break-word">Dúvidas frequentes    </div>
+        <div style="width: 627px; height: 308px; left: 131px; top: 263px; position: absolute; color: #24503C; font-size: 22px; font-family: Open Sans; font-weight: 400; word-wrap: break-word"> Como funcionam os atendimentos psicológicos?</div>
+        <div style="width: 627px; height: 308px; left: 903px; top: 380px; position: absolute; color: #24503C; font-size: 22px; font-family: Open Sans; font-weight: 400; word-wrap: break-word">Para quem a terapia é indicada?</div>
+        <div style="width: 625px; height: 46px; left: 435px; top: 525px; position: absolute; background: #22B996; border-radius: 100px"></div>
+        <div style="width: 479px; height: 44px; left: 500px; top: 535px; position: absolute; text-align: center; color: white; font-size: 18px; font-family: Trirong; font-weight: 700; word-wrap: break-word">Veja as respostas aqui</div>
+        <img style="width: 345px; height: 345px; left: -121px; top: 431px; position: absolute" src="assents/imagens/logo.PNG" />
+      </div>
+
+      <div style="width: 1700px; height: 784px; position: relative; background: white; overflow: hidden">
+        <div style="width: 838px; height: 80px; left: 46px; top: 77px; position: absolute; background: #22B996; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 100px"></div>
+        <div style="width: 401px; height: 48px; left: 408px; top: 93px; position: absolute; color: white; font-size: 35px; font-family: Open Sans; font-weight: 700; word-wrap: break-word">Contato</div>
+        <div style="width: 72px; height: 80px; left: 210px; top: 77px; position: absolute; background: #2D624A"></div>
+        <div style="width: 64px; height: 80px; left: 282px; top: 77px; position: absolute; background: #088367"></div>
+        <img style="width: 96px; height: 96px; left: 134px; top: 252px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 256px" src="assents/imagens/imagens-whats.png" />
+        <img style="width: 232.96px; height: 96px; left: 65.02px; top: 357px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)" src="assents/imagens/imagem-local.png" />
+        <img style="width: 241.03px; height: 102px; left: 60.97px; top: 465px; position: absolute" src="assents/imagens/imagem-mail.png" />
+        <div style="width: 1165px; height: 47.80px; left: 157px; top: 700.73px; position: absolute; background: #24503C; border-radius: 100px"></div>
+        <div style="width: 1165px; height: 45.73px; left: 157px; top: 588px; position: absolute; text-align: center; color: white; font-size: 18px; font-family: Trirong; font-weight: 700; word-wrap: break-word">Contato</div>
+        <img style="width: 549.44px; height: 366px; left: 303px; top: 252px; position: absolute" src="assents/imagens/imagem-mapa.avif" />
+        <img style="width: 690px; height: 523px; left: 957px; top: 95px; position: absolute; box-shadow: -9px 9px 4px rgba(0, 0, 0, 0.25); border-top-left-radius: 261.50px" src="assents/imagens/imagem-pessoas.jpg" />
+        <div style="width: 479px; height: 45px; left: 481px; top: 708px; position: absolute; text-align: center; color: white; font-size: 18px; font-family: Trirong; font-weight: 700; word-wrap: break-word">Entre em contato conosco</div>
+      </div>
+</main>
+
 </body>
-</html>
+</html>  
