--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div style="width: 1384px; height: 72px; left: 28px; top: 46px; position: absolute; background: white; border-radius: 100px"></div> <!-- Barra de navegação -->
     <nav>
         <ul style="list-style-type:  none; color: black; font-size: 18px; display: flex; gap: 20px; margin-top: 50px;position: relative; ">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/sobre.html">Sobre</a></li>
+            <li><a href="/index.html" target="_blank">Home</a></li>
+            <li><a href="http://127.0.0.1:5500/about.html" target="_blank">Sobre</a></li>
             <li><a href="/service.html">Serviços</a></li>
             <li><a href="/know.html">Saiba mais</a></li>
             <li><a href="/questions.html">Perguntas frequentes</a></li>
