--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <ul style="list-style-type:  none; color: black; font-size: 18px; display: flex; gap: 20px; margin-top: 50px;position: relative; ">
             <li><a href="/index.html" target="_blank">Home</a></li>
             <li><a href="http://127.0.0.1:5500/about.html" target="_blank">Sobre</a></li>
-            <li><a href="/service.html">Serviços</a></li>
+            <li><a href="/servicos.html">Serviços</a></li>
             <li><a href="/know.html">Saiba mais</a></li>
-            <li><a href="/questions.html">Perguntas frequentes</a></li>
+            <li><a href="http://127.0.0.1:5500/questions.html">Perguntas frequentes</a></li>
             <li><a href="/contact.html">Contato</a></li>
         </ul>
     </nav>
