Serviços.html + CSS Atualizado + Links adicionados e testados nas páginas home, sobre e servicos

--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sobre</title>
   <link rel="stylesheet" href="assents/style.css"> <!--add css-->
 </head>
@@ -10,12 +11,12 @@
   <header>
     <div class="logo">Ser em equilíbrio</div>
     <nav>
-      <a href="#">Home</a>
-      <a href="#">Sobre</a>
-      <a href="#">Serviços</a>
-      <a href="#">Saiba mais</a>
-      <a href="#">FAQ</a>
-      <a href="#">Contato</a>
+      <a href="./index.html">Home</a>
+      <a href="./about.html">Sobre</a>
+      <a href="./servicos.html">Serviços</a>
+      <a href="./know.html">Saiba mais</a>
+      <a href="./questions.html">FAQ</a>
+      <a href="./contact.html">Contato</a>
     </nav>
   </header>
   <!--parte principal com o nome e foto-->
@@ -23,7 +24,7 @@
     <h2>Sou</h2>
     <h1><span style="text-decoration: underline; color: #6d5bd0;">Gedalva Souza</span></h1>
     <div class="photo-circle">
-      <img src="foto-gedalva.jpg" alt=""> <!--add foto -->
+      <img src="./assents/imagens/png-transparent-of-standing-woman-while-smiling-middle-age-old-age-female-woman-child-woman-people-business-human-body.png" alt=""> <!--adiciona a foto da psicologa-->
     </div>
   </section>
   <!--título e texto dentro do quadrado verde-->
