--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <div style="width: 1384px; height: 72px; left: 28px; top: 46px; position: absolute; background: white; border-radius: 100px"></div> <!-- Barra de navegação -->
     <nav>
         <ul style="list-style-type:  none; color: black; font-size: 18px; display: flex; gap: 20px; margin-top: 50px;position: relative; ">
-            <li><a href="/index.html" target="_blank">Home</a></li>
-            <li><a href="http://127.0.0.1:5500/about.html" target="_blank">Sobre</a></li>
-            <li><a href="/servicos.html">Serviços</a></li>
-            <li><a href="/know.html">Saiba mais</a></li>
-            <li><a href="http://127.0.0.1:5500/questions.html">Perguntas frequentes</a></li>
-            <li><a href="/contact.html">Contato</a></li>
+            <li><a href="./index.html" target="_blank">Home</a></li>
+            <li><a href="./about.html" target="_blank">Sobre</a></li>
+            <li><a href="./servicos.html">Serviços</a></li>
+            <li><a href="./know.html">Saiba mais</a></li>
+            <li><a href="./questions.html">Perguntas frequentes</a></li>
+            <li><a href="./contact.html">Contato</a></li>
         </ul>
     </nav>
    </header>
@@ -38,7 +38,7 @@
     <img style="width: 156.24px; height: 154.01px; left: 1223.91px; top: 652.03px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 105px" src="assents/imagens/imagem-homem.jpg" > <!-- Imagem de destaque -->
     <img style="width: 151.64px; height: 151.64px; left: 1228.52px; top: 251.58px; position: absolute; background: linear-gradient(0deg, rgba(0, 122, 94, 0.10) 0%, rgba(0, 122, 94, 0.10) 100%); box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 156px" src="assents/imagens/imagem-mãe.jpg" > <!-- Imagem de destaque -->
     <div style="width: 479px; height: 46px; left: 127px; top: 765px; position: absolute; background: #24503C; border-radius: 100px"></div> <!--botão de contato-->
-    <div style="width: 479px; height: 44px; left: 127px; top: 772px; position: absolute; text-align: center; color: white; font-size: 18px; font-family: Trirong; font-weight: 700; word-wrap: break-word">Contato</div>
+    <a href="./contact.html" style="width: 479px; height: 44px; left: 127px; top: 772px; position: absolute; text-align: center; color: white; font-size: 18px; font-family: Trirong; font-weight: 700; word-wrap: break-word">Contato</a>
 
     <div style="width: 1700px; height: 1024px; position: relative; background: #325746; overflow: hidden; margin-top: 900px;">
         <div style="width: 409px; height: 51px; left: 110px; top: 103px; position: absolute; background: white; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 100px"></div>
@@ -59,7 +59,7 @@
         <div style="width: 1206px; height: 116px; left: 110px; top: 290px; position: absolute; color: #325746; font-size: 35px; font-family: Open Sans; font-weight: 400; word-wrap: break-word">“Mudar o pensamento é o primeiro passo para transformar a vida.”</div>
         <img style="width: 345px; height: 345px; left: 1267px; top: 47px; position: absolute" src="assents/imagens/logo.PNG" />
         <div style="width: 479px; height: 46px; left: 480px; top: 933px; position: absolute; background: #24503C; border-radius: 100px"></div>
-        <div style="width: 479px; height: 44px; left: 480px; top: 940px; position: absolute; text-align: center; color: white; font-size: 18px; font-family: Trirong; font-weight: 700; word-wrap: break-word">Saiba mais </div>
+        <a href="./know.html" style="width: 479px; height: 44px; left: 480px; top: 940px; position: absolute; text-align: center; color: white; font-size: 18px; font-family: Trirong; font-weight: 700; word-wrap: break-word">Saiba mais </a>
       </div>
 
       <div style="width: 1700px; height: 1240px; position: relative; background: #F3F2EB; overflow: hidden">
@@ -70,7 +70,7 @@
         <div style="width: 1206px; height: 116px; left: 177px; top: 157px; position: absolute; color: #325746; font-size: 35px; font-family: Open Sans; font-weight: 400; word-wrap: break-word">"Conhecer quem vai te acompanhar é o ponto de partida para um caminho de autoconhecimento e acolhimento."</div>
         <div style="width: 1136px; height: 308px; left: 152px; top: 450px; position: absolute"><span style="color: white; font-size: 22px; font-family: Open Sans; font-weight: 700; word-wrap: break-word"><br/><br/></span><span style="color: white; font-size: 22px; font-family: Open Sans; font-weight: 400; word-wrap: break-word">Com anos de experiência em atendimentos presenciais e online, a Dra. Gedalva de Souza<br/>(crp 06/164765), oferece atendimento psicológico, proporcionando suporte emocional e autoconhecimento, com a abordagem da Terapia Cognitivo-Comportamental (TCC), as sessões ajudam a compreender e modificar padrões de pensamento e comportamento que impactam sua vida. <br/>Agende sua consulta e dê o primeiro passo para uma vida mais equilibrada e saudável!</span></div>
         <div style="width: 479px; height: 46px; left: 480px; top: 898px; position: absolute; background: #24503C; border-radius: 100px"></div>
-        <div style="width: 479px; height: 44px; left: 480px; top: 906px; position: absolute; text-align: center; color: white; font-size: 18px; font-family: Trirong; font-weight: 700; word-wrap: break-word">Saiba mais </div>
+        <a href="./know.html" style="width: 479px; height: 44px; left: 480px; top: 906px; position: absolute; text-align: center; color: white; font-size: 18px; font-family: Trirong; font-weight: 700; word-wrap: break-word">Saiba mais</a>
         <div style="width: 1652.71px; height: 399px; left: -46px; top: 898px; position: absolute; background: white; box-shadow: 8px 0px 6px rgba(0, 0, 0, 0.25) inset; border-radius: 200px"></div>
       </div>
 
@@ -86,8 +86,8 @@
         <div style="width: 659px; height: 0px; left: 581px; top: 914px; position: absolute; transform: rotate(180deg); transform-origin: top left; outline: 6px #169477 solid; outline-offset: -3px"></div>
         <img style="width: 490px; height: 415px; left: 1382px; top: 1189px; position: absolute; transform: rotate(180deg); transform-origin: top left; box-shadow: 0px 10px 4px rgba(0, 0, 0, 0.25) inset; border-top-right-radius: 207.50px; border-bottom-right-radius: 207.50px; border-bottom-left-radius: 207.50px" src="assents/imagens/imagem-homem 2.jpg" />
         <div style="width: 625px; height: 46px; left: 757px; top: 543px; position: absolute; background: #24503C; border-radius: 100px"></div>
-        <div style="width: 625px; height: 44px; left: 757px; top: 626px; position: absolute; text-align: center; color: white; font-size: 18px; font-family: Trirong; font-weight: 700; word-wrap: break-word">Saiba mais </div>
-        <div style="width: 479px; height: 44px; left: 843px; top: 549px; position: absolute; text-align: center; color: white; font-size: 18px; font-family: Trirong; font-weight: 700; word-wrap: break-word">Saiba mais </div>
+        <a href="./servicos.html" style="width: 625px; height: 44px; left: 757px; top: 626px; position: absolute; text-align: center; color: white; font-size: 18px; font-family: Trirong; font-weight: 700; word-wrap: break-word">Saiba mais </a>
+        <a href="./servicos.html" style="width: 479px; height: 44px; left: 843px; top: 549px; position: absolute; text-align: center; color: white; font-size: 18px; font-family: Trirong; font-weight: 700; word-wrap: break-word">Saiba mais </a>
         <div style="width: 625px; height: 46px; left: 130px; top: 1231px; position: absolute; background: #24503C; border-radius: 100px"></div>
         <div style="width: 479px; height: 44px; left: 216px; top: 1237px; position: absolute; text-align: center; color: white; font-size: 18px; font-family: Trirong; font-weight: 700; word-wrap: break-word">Saiba mais </div>
       </div>
@@ -100,7 +100,7 @@
         <div style="width: 627px; height: 308px; left: 131px; top: 263px; position: absolute; color: #24503C; font-size: 22px; font-family: Open Sans; font-weight: 400; word-wrap: break-word"> Como funcionam os atendimentos psicológicos?</div>
         <div style="width: 627px; height: 308px; left: 903px; top: 380px; position: absolute; color: #24503C; font-size: 22px; font-family: Open Sans; font-weight: 400; word-wrap: break-word">Para quem a terapia é indicada?</div>
         <div style="width: 625px; height: 46px; left: 435px; top: 525px; position: absolute; background: #22B996; border-radius: 100px"></div>
-        <div style="width: 479px; height: 44px; left: 500px; top: 535px; position: absolute; text-align: center; color: white; font-size: 18px; font-family: Trirong; font-weight: 700; word-wrap: break-word">Veja as respostas aqui</div>
+        <a href="./questions.html" style="width: 479px; height: 44px; left: 500px; top: 535px; position: absolute; text-align: center; color: white; font-size: 18px; font-family: Trirong; font-weight: 700; word-wrap: break-word">Veja as respostas aqui</a>
         <img style="width: 345px; height: 345px; left: -121px; top: 431px; position: absolute" src="assents/imagens/logo.PNG" />
       </div>
 
@@ -116,9 +116,9 @@
         <div style="width: 1165px; height: 45.73px; left: 157px; top: 588px; position: absolute; text-align: center; color: white; font-size: 18px; font-family: Trirong; font-weight: 700; word-wrap: break-word">Contato</div>
         <img style="width: 549.44px; height: 366px; left: 303px; top: 252px; position: absolute" src="assents/imagens/imagem-mapa.avif" />
         <img style="width: 690px; height: 523px; left: 957px; top: 95px; position: absolute; box-shadow: -9px 9px 4px rgba(0, 0, 0, 0.25); border-top-left-radius: 261.50px" src="assents/imagens/imagem-pessoas.jpg" />
-        <div style="width: 479px; height: 45px; left: 481px; top: 708px; position: absolute; text-align: center; color: white; font-size: 18px; font-family: Trirong; font-weight: 700; word-wrap: break-word">Entre em contato conosco</div>
+        <a href="./contact.html" style="width: 479px; height: 45px; left: 481px; top: 708px; position: absolute; text-align: center; color: white; font-size: 18px; font-family: Trirong; font-weight: 700; word-wrap: break-word">Entre em contato conosco</a>
       </div>
 </main>
 
 </body>
-</html>  
+</html>
