--- a/know.html
+++ b/know.html
@@ -24,16 +24,28 @@
     }
 
     .container {
-      max-width: 1100px;
+      width: 1000px; 
       margin: 0 auto;
       padding: 40px 20px;
     }
 
     /* Cabeçalho */
-    header {
+    .titulo {
       text-align: center;
-      margin-bottom: 80px;
+      margin-bottom: 100px;
+      margin-top: 200px;
     }
+
+    .header {
+    display: flex;
+    margin-top: 200px;
+    height: 200px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 40px;
+    background-color: #ffffff;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+  }
 
     header h1 {
       font-size: 48px;
@@ -76,6 +88,7 @@
     /* box com texto e sombra */
     .box-light, .box-dark {
       background-color: #FFFFFF; 
+      margin: 10px;
       border-radius: 12px;
       padding: 20px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.05);
@@ -97,6 +110,7 @@
     }
 
     .highlight {
+      margin: 10px;
       font-weight: bold;
       color: #007A5E;
       text-transform: uppercase;
@@ -120,14 +134,32 @@
 
   <div class="container">
     <!-- topo da página com título e os textos -->
-    <header>
-      <h1>Saiba Mais</h1>
-      <div class="sub">ABORDAGEM E BENEFÍCIOS DA TERAPIA</div>
+    <header class="header">
+      <img src="assents/imagens/logo.PNG"
+            style="width: 88px; height: 88px; left: 39px; top: 38px; position: absolute;"> <!-- Logo da empresa -->
+        <h1
+            style="width: 231px; height: 42px; left: 131px; top: 61px; position: absolute; color: #325746; font-size: 25px; font-family: Trirong; font-weight: 700; word-wrap: break-word">
+            Ser em equilibrio <!-- Nome da empresa -->
+            <div
+                style="width: 1384px; height: 72px; left: 28px; top: 46px; position: absolute; background: white; border-radius: 100px">
+            </div> <!-- Barra de navegação -->
+            <nav>
+                <ul
+                    style="list-style-type:  none; color: black; font-size: 18px; display: flex; gap: 20px; margin-top: 50px;position: relative; ">
+                    <li><a href="./index.html" target="_blank">Home</a></li>
+                    <li><a href="./about.html" target="_blank">Sobre</a></li>
+                    <li><a href="./servicos.html">Serviços</a></li>
+                    <li><a href="./know.html">Saiba mais</a></li>
+                    <li><a href="./questions.html">Perguntas frequentes</a></li>
+                    <li><a href="./contact.html">Contato</a></li>
+                </ul>
+            </nav>
+      <h1 class="titulo" style="text-align: justify">Saiba Mais</h1>
+      <div class="sub titulo">ABORDAGEM E BENEFÍCIOS DA TERAPIA</div>
     </header>
 
     <!-- Abordagem -->
     <section>
-      <div class="section-title">Saiba Mais<br>Abordagem</div>
       <div class="grid-2">
         <div class="box-light">
           <p>
